Bugfix 16592 - Check box icons are placed too high in the Global Permissions tab
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@13460 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/HaloACL/scripts/jsTree.v.0.9.9a/themes/haloacl/style.css
+++ b/extensions/HaloACL/scripts/jsTree.v.0.9.9a/themes/haloacl/style.css
@@ -124,7 +124,6 @@
     height: 20px;
     cursor: pointer;
     border: none;
-    margin-top: -20px;
     position: absolute;
     right: 0px;
 }
